--- a/index.css
+++ b/index.css
@@ -3,33 +3,87 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.text-bold {
+    font-weight: bold;
+}
+
+.text-red {
+    color: red;
+    font-weight: bold;
+}
+
+.age-restriction {
+    border: 1px solid black;
+    border-radius: 0.3rem;
+    padding: 4px;
+    margin: 0 1rem;
+}
+
+.btn {
+    background: red;
+    color: white;
+    display: inline-block;
+}
+
+.btn-xl {
+    font-size: 1.5rem;
+    padding: 1rem 3rem;
+    border-radius: 0.7rem;
+    margin: 1rem 0;
+}
+
+.btn-xl i {
+    margin-left: -2rem;
+    margin-right: 1rem;
+}
+
+.btn-l i {
+    margin-left: -1.8rem;
+    margin-right: 0.8rem;
+}
+
+.btn-l {
+    font-size: 1.2rem;
+    padding: 0.9rem 2.5rem;
+    border-radius: 0.5rem;
+    margin: 0.9rem 0;
+}
+
+
+/* header section */
+
 header {
-    padding: 0 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-header h1, header div{
-width: 30%;
+    padding: 0 1rem;
 }
 
-header nav a {
-margin: 0 0.5rem;
-text-decoration: none;
-color: rgb(red, green, blue)
+header h1, header div {
+    width: 30%;
 }
 
-header nav a:hover {
+nav a {
+    margin: 0 0.5rem;
+    text-decoration: none;
+    color: rgb(59, 59, 59);
+}
+
+nav a:hover {
     color: red;
 }
 
 input {
     padding: 0.5rem;
     padding-right: 1.5rem;
-
+/*     background-image: url("https://w7.pngwing.com/pngs/608/913/png-transparent-computer-icons-google-search-symbol-mobile-search-search-for-miscellaneous-logo-mobile-phones-thumbnail.png");
+    background-size: 1rem;
+    background-repeat: no-repeat;
+    background-position: right; */
 }
 
-.search-icon{
+.search-icon {
     margin-left: -2.3rem;
 }
 
@@ -38,9 +92,10 @@ input {
 }
 
 .user-avatar {
-width: 2rem;
-border-radius: 100%;
-} 
+    width: 2.5rem;
+    border-radius: 100%;
+}
+
 
 .access-menu {
     display: flex;
@@ -53,55 +108,121 @@ h1 {
     color: red;
 }
 
+/* main section */
+
 main {
-margin: 1rem;
-border: 1px solid black;
-padding: 2rem;
-height: 70vh;
-display: flex;
-flex-direction: column;
-justify-content: center;
-}
-
-.icon-style {
-   color: red;
-}
-
-.info-section {
- 
+    margin: 1rem;
+    border: 1px solid black;
+    padding: 2rem;
+    height: 65vh;
     display: flex;
-    justify-content: left;
-    gap: 20px; ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 
-.info-movie {
-    display: flex;
-    justify-content: flex-start;
-   
-}
-
-.description {}
-
-.text-red {
-    
+.rating-container {
     color: red;
-    font-weight: bold;
 }
 
-.btn {
-    font-size: 30px;
-    font-weight: bold;
-    width: 280px;
-    height: 90px;
-    color: white; 
-    background: #FF0000;
-    border-radius: 10px;
-    margin-top: 40px;
-    text-align: center; 
+main h2 {
+    font-size: 3rem;
+    margin: 1.5rem 0;
 }
 
-div i {
-   
+.details-container p {
+    margin: 1vh 0;
+}
+
+.description {
+    width: 50%;
+}
+
+/* section */
+
+section {
+    margin: 1rem;
+    margin-bottom: 3rem;
+}
+
+.section-content, .section-header {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+    align-items: center;
+    gap: 4rem;
+}
+
+.card {
+    width: 30%;
+    aspect-ratio: 2/1;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 2rem;
+}
+
+.card h4 {
+    font-size: 2rem;
+    margin: 1.5rem 0;
+}
+
+.card .age-restriction {
+
+    margin-left: 0;
+}
+
+/* footer */
+footer {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    align-items: flex-start; 
+    margin: 1rem;
+    margin-bottom: 10rem;
+}
+
+footer nav {
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 1rem;
+}
+
+footer p:nth-child(n+1) {
+    margin-top: 0;
+}
+
+footer img {
+    height: 3rem;
+    margin-top: -0.4rem;
+}
+
+footer div:first-child {
+    flex-basis: 60%;
+    flex-grow: 1;
+}
+
+
+footer nav a:first-child {
+    margin-left: 0;
+}
+
+@media (max-width: 900px) {
+    .description {
+        width: inherit;
+    }
+
+    header {
+        flex-wrap: wrap;
+    }
+
+    header nav {
+        order: 3;
+        width: 100%;
+        text-align: center;
+    }
+    .section-content {
+        overflow: auto;
+    }
 }
